--- a/package.json
+++ b/package.json
@@ -24,5 +24,14 @@
   "bugs": {
     "url": "https://github.com/nobleorji/vanillaNob/issues"
   },
-  "homepage": "https://github.com/nobleorji/vanillaNob#readme"
+  "homepage": "https://github.com/nobleorji/vanillaNob#readme",
+  "dependencies": {
+    "@babel/preset-env": "^7.19.3",
+    "express": "^4.18.1",
+    "jest": "^29.1.2",
+    "present": "^1.0.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0"
+  }
 }
