--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/nobleorji/vanillaNob#readme",
   "dependencies": {
     "@babel/preset-env": "^7.19.3",
+    "cli": "^1.0.1",
     "express": "^4.18.1",
     "jest": "^29.1.2",
     "present": "^1.0.0"
