--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,8 @@ on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [ test ]
-  pull request: [test]
+  pull request: 
+    branches: [ test ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
