--- a/deploy.yml
+++ b/deploy.yml
@@ -1,4 +1,4 @@
- check out all Kubernetes commands here:
+ #check out all Kubernetes commands here:
 # https://kubernetes.io/docs/reference/kubectl/cheatsheet/
 # -----------------------------------------------------------*
 # implies the use of kubernetes 1.7
@@ -22,10 +22,10 @@ spec:
       # Kubernetes run docker pull pseudo/your-image:latest under the hood
       # Image field in Kubernetes resources is simply the docker image to run.
       containers:
-      - name: 5b686d629504
+      - name: nodejs-vanillanob
       - name: nodejs-vanillanob
         # pulling image from my DockerHub
-        image: nobleorji/nodejs-vanillanob:v1.0.1
+        image: nobleorji/nodejs-vanillanob:1.0.2
         # using if not present works well with images that has tag
         # if you image is tag:lastest - use Always otherwise you
         # wouldn't get the fresh version of your image
