--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,11 +1,4 @@
-# This workflow will build and push a node.js application to an Azure Web App when a commit is pushed to your default branch.
-#
-# This workflow assumes you have already created the target Azure App Service web app.
-# For instructions see https://docs.microsoft.com/en-us/azure/app-service/quickstart-nodejs?tabs=linux&pivots=development-environment-cli
-#
-# To configure this workflow:
-
-# This is a basic workflow to help you get started with Actions
+# # This is a basic workflow to help you get started with Actions
 
 name: CI-CD workflow test
 
@@ -14,7 +7,7 @@ on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [ test ]
-  pull_request: 
+  pull_request:
     branches: [ test ]
 
   # Allows you to run this workflow manually from the Actions tab
@@ -23,8 +16,8 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains multiple jobs
-  build:
-    name: Build App
+  build_test:
+    name: Test App
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     strategy:
@@ -47,6 +40,6 @@ jobs:
           npm install
           npm ci 
       # build and test the apps     
-      - name: build
+      - name: est
         run: |
-          npm run build
+          npm run test
