--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,12 +77,12 @@ jobs:
             context: ./
             file: ./Dockerfile
             push: true
-            tags: ${{ secrets.DOCKERHUB_USERNAME }}/nodejs-vanillabeyk:latest
+            tags: ${{ secrets.DOCKERHUB_USERNAME }}/nodejs-vanillanob:latest
           
         - name: Run the image in a container
           uses: addnab/docker-run-action@v3
           with:
-            image: ${{ secrets.DOCKERHUB_USERNAME }}/nodejs-vanillabeyk:latest
+            image: ${{ secrets.DOCKERHUB_USERNAME }}/nodejs-vanillanob:latest
             run: |
               echo "runing the docker image"
               echo "Testing the nodejs  app endpoints"
